CHATS_SIT/force-app/main/default/objects/BenefitManagementRecertification__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>