CHATS_SIT/force-app/main/default/objects/BenefitManagementRecertification__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubType</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>